syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  reserved 1;
  string lang = 2;
  int32 friendliness = 3;
  string first_name = 4;
  string last_name = 5;
}

// The response message containing the greetings.
message HelloReply { string message = 1; }
